--- a/cus_mybaties_generator/src/main/resources/templates/bak/entity.java.vm
+++ b/cus_mybaties_generator/src/main/resources/templates/bak/entity.java.vm
@@ -35,14 +35,16 @@ import lombok.NoArgsConstructor;
 @ApiModel(value="${entity}对象", description="$!{table.comment}")
 #end
 #if(${superEntityClass})
-public class ${entity} extends ${superEntityClass}<${superEntity}> {
+public class ${entity} extends ${superEntityClass}#if(${activeRecord})<${entity}>#end {
+#elseif(${activeRecord})
+public class ${entity} extends Model<${entity}> {
 #else
 public class ${entity} implements Serializable {
 #end
 
-
+#if(${entitySerialVersionUID})
 private static final long serialVersionUID=1L;
-
+#end
 ## ----------  BEGIN 字段循环遍历  ----------
 #foreach($field in ${table.fields})
 
@@ -90,9 +92,61 @@ private ${field.propertyType} ${field.propertyName};
 #end
 ## ----------  END 字段循环遍历  ----------
 
+#if(!${entityLombokModel})
+    #foreach($field in ${table.fields})
+        #if(${field.propertyType.equals("boolean")})
+            #set($getprefix="is")
+        #else
+            #set($getprefix="get")
+        #end
 
+    public ${field.propertyType} ${getprefix}${field.capitalName}() {
+            return ${field.propertyName};
+            }
 
+        #if(${entityBuilderModel})
+        public ${entity} set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
+        #else
+        public void set${field.capitalName}(${field.propertyType} ${field.propertyName}) {
+        #end
+            this.${field.propertyName} = ${field.propertyName};
+        #if(${entityBuilderModel})
+                return this;
+        #end
+            }
+    #end
+#end
 
+#if(${entityColumnConstant})
+    #foreach($field in ${table.fields})
+    public static final String ${field.name.toUpperCase()} = "${field.name}";
 
+    #end
+#end
+#if(${activeRecord})
+@Override
+protected Serializable pkVal() {
+    #if(${keyPropertyName})
+            return this.${keyPropertyName};
+    #else
+            return null;
+    #end
+        }
 
+#end
+#if(!${entityLombokModel})
+@Override
+public String toString() {
+        return "${entity}{" +
+    #foreach($field in ${table.fields})
+        #if($!{foreach.index}==0)
+            ${field}
+                "${field.propertyName}=" + ${field.propertyName} +
+        #else
+                ", ${field.propertyName}=" + ${field.propertyName} +
+        #end
+    #end
+        "}";
+        }
+#end
         }
