--- a/api-gateway/gateway_admin/src/main/resources/templates/frame/header/header.html
+++ b/api-gateway/gateway_admin/src/main/resources/templates/frame/header/header.html
@@ -1,14 +1,5 @@
 <!DOCTYPE html>
 <html lang="zh-cn" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head>
-	<meta charset="UTF-8">
-	<title th:text=${title}></title>
-	<!-- bootstrap -->
-	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/custom/custom.css">
-	<script src="/js/jquery-3.2.1.min.js"></script>
-	<script src="/static/js/lib/bootstrap.min.js"></script>
-</head>
 <body>
 	<div  th:fragment="header">
 		<div class="row border-bottom">
@@ -24,8 +15,8 @@
 					<li><a title="全屏显示" href="javascript:void(0)" id="fullScreen"><i class="fa fa-arrows-alt"></i> 全屏显示</a></li>
 					<li class="dropdown user-menu">
 						<a href="javascript:void(0)" class="dropdown-toggle" data-hover="dropdown">
-							<img th:src="(${user.avatar} == '') ? @{/img/profile.jpg} : @{${user.avatar}}" th:onerror="this.src='img/profile.jpg'" class="user-image">
-							<span class="hidden-xs">[[${#strings.defaultString(user.userName, '-')}]]</span>
+							<img th:src="(${avatar} == '') ? @{/img/profile.jpg} : @{${avatar}}" th:onerror="this.src='img/profile.jpg'" class="user-image">
+							<span class="hidden-xs">[[${#strings.defaultString(userName, '-')}]]</span>
 						</a>
 						<ul class="dropdown-menu">
 							<li class="mt5">
