--- a/api-gateway/gateway_admin/src/main/resources/templates/frame/menue/leftMenu.html
+++ b/api-gateway/gateway_admin/src/main/resources/templates/frame/menue/leftMenu.html
@@ -18,11 +18,11 @@
 					<a class="menuItem noactive" title="个人中心" th:href="@{/system/user/profile}">
 						<div class="hide" th:text="个人中心"></div>
 						<div class="pull-left image">
-							<img th:src="(${user.avatar} == '') ? @{/img/profile.jpg} : @{${user.avatar}}" th:onerror="this.src='img/profile.jpg'" class="img-circle" alt="User Image">
+							<img th:src="(${avatar} == '') ? @{/img/profile.jpg} : @{${avatar}}" th:onerror="this.src='img/profile.jpg'" class="img-circle" alt="User Image">
 						</div>
 					</a>
 					<div class="pull-left info">
-						<p>[[${user.loginName}]]</p>
+						<p>[[${loginName}]]</p>
 						<a href="#"><i class="fa fa-circle text-success"></i> 在线</a>
 						<a th:href="@{logout}" style="padding-left:5px;"><i class="fa fa-sign-out text-danger"></i> 注销</a>
 					</div>
@@ -31,7 +31,7 @@
 					<a class="menuItem noactive" title="个人中心" th:href="@{/system/user/profile}">
 						<div class="hide" th:text="个人中心"></div>
 						<div class="pull-left image">
-							<img th:src="(${user.avatar} == '') ? @{/img/profile.jpg} : @{${user.avatar}}" th:onerror="this.src='img/profile.jpg'" class="img-circle" alt="User Image">
+							<img th:src="(${avatar} == '') ? @{/img/profile.jpg} : @{${avatar}}" th:onerror="this.src='img/profile.jpg'" class="img-circle" alt="User Image">
 						</div>
 					</a>
 					<div class="pull-left info">
@@ -44,7 +44,9 @@
 			<li>
 				<a class="menuItem" th:href="@{/welcome.html}"><i class="fa fa-home"></i> <span class="nav-label">首页</span> </a>
 			</li>
-			<!--<li th:each="menu : ${menus}">
+
+
+			<!--/*<li th:each="menu : ${menus}">
 				<a th:class="@{${menu.url != '' && menu.url != '#'} ? ${menu.target}}" th:href="@{${menu.url == ''} ? |#| : ${menu.url}}">
 					<i class="fa fa-bar-chart-o" th:class="${menu.icon}"></i>
 					<span class="nav-label" th:text="${menu.menuName}">一级菜单</span>
@@ -65,7 +67,7 @@
 						</ul>
 					</li>
 				</ul>
-			</li>-->
+			</li> */-->
 			<li >
 				<a href="#"><i class="fa fa-desktop"></i><span class="nav-label">实例演示</span><span class="fa arrow"></span></a>
 				<ul class="nav nav-second-level collapse">
