--- a/api-gateway/gateway_admin/src/main/resources/templates/index.html
+++ b/api-gateway/gateway_admin/src/main/resources/templates/index.html
@@ -17,15 +17,15 @@
     <link th:href="@{/css/ry-ui.css?v=4.3.1}" rel="stylesheet"/>
     <script th:src="@{/js/lib/jquery.min.js}"></script>
     <script th:src="@{/js/lib/bootstrap.min.js}"></script>
-    <script th:src="@{/js/lib/plugins/metisMenu/jquery.metisMenu.js}"></script>
-    <script th:src="@{/js/lib/plugins/slimscroll/jquery.slimscroll.min.js}"></script>
+    <script th:src="@{/js/plugin/metisMenu/jquery.metisMenu.js}"></script>
+    <script th:src="@{/js/plugin/slimscroll/jquery.slimscroll.min.js}"></script>
     <script th:src="@{/js/lib/jquery.contextMenu.min.js}"></script>
     <script th:src="@{/js/lib/components/blockUI/jquery.blockUI.js}"></script>
     <script th:src="@{/js/lib/components/layer/layer.min.js}"></script>
     <script th:src="@{/js/ry-ui.js?v=4.3.1}"></script>
     <script th:src="@{/js/common.js?v=4.3.1}"></script>
     <script th:src="@{/js/index.js}"></script>
-    <script th:src="@{/js/lib/components/jquery.fullscreen.js}"></script>
+    <script th:src="@{/js/lib/components/fullscreen/jquery.fullscreen.js}"></script>
 </head>
 <body class="fixed-sidebar full-height-layout gray-bg" style="overflow: hidden">
 <div id="wrapper">
@@ -43,7 +43,7 @@
         <div th:replace="frame/header/header :: header"></div>
         <div class="row mainContent" id="content-main">
             <iframe class="RuoYi_iframe" name="iframe0" width="100%" height="100%" data-id="/system/main"
-                    th:src="@{/welcome.html}" frameborder="0" seamless></iframe>
+                    th:src="@{/welcome}" frameborder="0" seamless></iframe>
         </div>
         <div th:replace="frame/footer/footer :: footer"></div>
     </div>
